manifests/base/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: #{SERVICE_NAME}#-router
spec:
    hosts:
        -  #{HOST}#
    gateways:
        - apis/api-gateway
    http:
        - match:
              - uri:
                    prefix: /#{DOMAIN}#/#{SERVICE_NAME}#
          route:
              - destination:
                    host: #{SERVICE_NAME}#
                    port:
                        number: 8080
